--- a/ref.bib
+++ b/ref.bib
@@ -10,3 +10,11 @@
     pages = "146",
     year = "2020"
 }
+
+@book{Wald:1984rg,
+    author = "Wald, Robert M.",
+    title = "{General Relativity}",
+    publisher = "Chicago University Press",
+    address = "Chicago, U.S.A.",
+    year = "1984"
+}
