--- a/ref.bib
+++ b/ref.bib
@@ -18,3 +18,15 @@
     address = "Chicago, U.S.A.",
     year = "1984"
 }
+
+@article{Iyer:1994ys,
+    author = "Iyer, Vivek and Wald, Robert M.",
+    title = "{Some properties of Noether charge and a proposal for dynamical black hole entropy}",
+    eprint = "gr-qc/9403028",
+    archivePrefix = "arXiv",
+    doi = "10.1103/PhysRevD.50.846",
+    journal = "Phys. Rev. D",
+    volume = "50",
+    pages = "846--864",
+    year = "1994"
+}
