--- a/ref.bib
+++ b/ref.bib
@@ -30,3 +30,20 @@
     pages = "846--864",
     year = "1994"
 }
+
+@incollection{Crnkovic:1986ex,
+       author = {{Crnkovic}, C. and {Witten}, E.},
+        title = "{Covariant description of canonical formalism in geometrical theories}",
+    booktitle = {Three Hundred Years of Gravitation},
+         year = 1987,
+        editor = "Hawking, S. W. and Israel, W.",
+        publisher      = {Cambridge University Press},
+}
+
+@book{compere2019advanced,
+  title={Advanced lectures on general relativity},
+  author={Comp{\`e}re, Geoffrey},
+  series         = {Lecture Notes in Physics},
+  year={2019},
+  publisher={Springer Cham}
+}
