--- a/main.tex
+++ b/main.tex
@@ -76,6 +76,12 @@ The usual Hamiltonian mechanics can be restored if we take
 \end{equation}
 
 \section{Construction of Covariant Phase Space}
+The standard Hamiltonian formalism has the following disadvantanges in some specific cases involving covariance\cite{Gieres:2021ekc}:
+\begin{itemize}
+    \item Time derivatives of fields are treated differently from spatial derivatives, which makes Lorentz covariance not manifest.
+    \item The proof of relativistic invariance of physical results is complicated.
+    \item In curved spacetime, the sepration of space and time is often the origin of the messy details in general covariant theory.
+\end{itemize}
 \begin{definition}[Phase space]
     The \textit{phase space} $\mathcal{P}$ is defined as
     \begin{equation}
