--- a/ref.bib
+++ b/ref.bib
@@ -47,3 +47,13 @@
   year={2019},
   publisher={Springer Cham}
 }
+
+@unpublished{Gieres:2021ekc,
+    author = "Gieres, Francois",
+    title = "{Covariant canonical formulations of classical field theories}",
+    eprint = "2109.07330",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    month = "9",
+    year = "2021"
+}
