--- a/main.tex
+++ b/main.tex
@@ -305,9 +305,11 @@ It will be useful to introduce the Noether current\cite{Iyer:1994ys}
 \begin{proof}
     \begin{equation}
         \begin{split}
-            \dd{J_\xi}=\dd{X_\xi\cdot\Theta}-\dd{\xi\cdot L}
+            \dd{J_\xi}&=\dd{(X_\xi\cdot\Theta)}-\dd{(\xi\cdot L)}\\
+                      &=X_\xi\cdot\dd{\Theta}-\mathcal{L}_\xi L
         \end{split}
     \end{equation}
+    We have $\dd{(X_\xi\cdot\Theta)}=X_\xi\cdot\dd{\Theta}$ because $X_\xi$ is a vector on phase space and $\mathrm{d}$ is a exterior derivative on spacetime $M$.
 \end{proof}
 
 
